Commit correctifs contrastes

--- a/style.css
+++ b/style.css
@@ -745,7 +745,8 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #e7e4e4!important;
+    font-size: 15px;
 }
 
 .portfolio-thumb {
